--- a/depositor/single deposit/stylesheet.css
+++ b/depositor/single deposit/stylesheet.css
@@ -2,7 +2,6 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    font-family: century;
 }
 .logo{
     width: 150px;
@@ -21,8 +20,10 @@ body{
     background-image: url(../../images/trrrr.png);
     background-repeat: repeat;
     background-size: auto;
-
 }
 .details{
     margin-top: 250px;
+}
+.analysis{
+    margin-left: 450px;
 }
