--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(../images/nine-kopfer-fYTSQ7B8Q8Y-unsplash.jpg);
+    background-image: url(images/nine-kopfer.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
