--- a/depositor/single deposit/stylesheet.css
+++ b/depositor/single deposit/stylesheet.css
@@ -40,3 +40,21 @@ body{
     width: 50px;
     float: right;
 }
+.header{
+    align-items: center;
+}
+.text{
+    color: red;
+}
+h2{
+    font-weight: bolder;
+    font-size: 45px;
+    margin-top: 50px;
+    margin-left: 40px;
+    font-family:'Gill Sans MT';
+}
+h4{
+    font-size: 45px;
+    font-family:'Gill Sans MT';
+    margin-left: 250px;
+}
