--- a/depositor/single deposit/stylesheet.css
+++ b/depositor/single deposit/stylesheet.css
@@ -16,16 +16,12 @@ h1{
     color: red;
     font-family:'Gill Sans MT';
 }
-body{
-    background-image: url(../../images/trrrr.png);
-    background-repeat: repeat;
-    background-size: auto;
-}
 .details{
     margin-top: 0px;
 }
 .analysis{
-    margin-left: 450px;
+    margin-left: 300px;
+    align-content: center;
 }
 .acct_details{
     margin-top: 100px;
