--- a/evacuator/stylesheet.css
+++ b/evacuator/stylesheet.css
@@ -16,3 +16,22 @@ h1{
     padding-top: 120px;
     padding-left: 400px;
 }
+.logo{
+    width: 80px;
+    height: 80px;
+    float: right;
+
+}
+h2{
+    padding-left:50px;
+    font-size: 50px;
+}
+td{
+    text-transform: uppercase;
+}
+th{
+    text-transform: uppercase;
+}
+.move{
+    padding-top: 100px;
+}
